spacings corrected

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ footer {
 
 fieldset {
     border: none;
-    padding: 25px 0;
+    padding: 25px 0 0;
     box-sizing: border-box;
 }
 fieldset:last-child{
@@ -101,8 +101,8 @@ header {
 }
 
 .sub_heading_sec {
-    margin-top: 20px;
-    padding: 20px 0;
+    margin-top: 15px;
+    padding: 20px 0 10px;
 }
 
 .sub_heading {
@@ -212,9 +212,15 @@ input[type="checkbox"]:checked + .label_checkbox::after {
     text-align: center;
     border-radius: 10px;
     border: none;
-    padding: 10px;
+    padding:  5px 20px;
     text-transform: capitalize;
     box-sizing: border-box;
+    -moz-box-shadow: inset 4px 0 4px rgba(128, 128, 128, .4);
+    -webkit-box-shadow: inset 4px 0 4px rgba(128, 128, 128, .4);
+    -ms-box-shadow: inset 4px 0 4px rgba(128, 128, 128, .4);
+    -o-box-shadow: inset 4px 0 4px rgba(128, 128, 128, .4);
+    box-shadow: inset 4px 0 4px rgba(128, 128, 128, .4);
+    margin: 15px 0;
 }
 
 footer form {
@@ -250,7 +256,7 @@ footer input[type='text'] {
     color: #fff;
     font: 700 31px/33px "Arial";
     padding: 10px 20px;
-    margin: 20px 0;
+    margin: 40px 0;
     border: none;
     text-transform: uppercase;
 }
